--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-body {margin:0;}
+body {
+    margin:0;
+}
 
 ul {
     list-style-type: none;
@@ -6,9 +8,9 @@ ul {
     padding: 0;
     overflow: hidden;
     top: 0;
-	position: fixed;
+	  position: fixed;
     width: 100%;
-	background-color: #333
+	  background-color: #333
 }
 
 li {
@@ -23,8 +25,20 @@ li a {
     text-decoration: none;
 }
 
-h1,h2 {
-	font-family: Monotype Corsiva
+h1 {
+    font-family: Monotype Corsiva;
+    font-size: 60px;
+    position: relative;
+    top: 10%;
+    left: 40%;
+}
+
+h2 {
+    font-family: Monotype Corsiva;
+    position: relative;
+    padding-top: 0px;
+    top: 5%;
+    left: 45%;
 }
 
 .main {
